# emm42-python

./: README.md  gui.py  pyproject.toml
.github/agents/: e2e-regression-guardian.agent.md
emm42/: __init__.py  service.py  session.py  transport.py
emm42/adapters/: __init__.py  stubs.py
emm42/protocol/: __init__.py  codec.py  commands.py
emm42_driver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_codec_clean.py  test_commands.py
